<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_intervention">

    <fragment
        android:id="@+id/nav_intervention"
        android:name="com.example.miniprojet.ui.InterventionFragment"
        android:label="@string/menu_interventions"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inter_assign"
        android:name="com.example.miniprojet.ui.InterventionFragment"
        android:label="@string/menu_inter_assign"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.example.miniprojet.ui.InterventionAssigneeFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_adresse"
        android:name="com.example.miniprojet.ui.InterventionFragment"
        android:label="@string/menu_adresses"
        tools:layout="@layout/fragment_home" />
</navigation>